[add]コントローラに防御的コードを実装
・StudentController.javaのregisterStudentのなかで防御的コードを実装しました
・具体的には、StudentDetailのList<StudentsCourses>に対し、nullチェックと空リストチェックをしています
・nullの場合はArrayListを代入し、空の場合は空のStudentsCoursesオブジェクトを代入しています